--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "githubid/sample",
+    "name": "mina-theragenetex/sample2",
     "description": "This is my first Composer package.",
     "license": "MIT",
     "keywords": ["sample"],
